Fixed a bug in the man drag handler
Fixed: Stop recording data after 20 seconds to avoid leaking
Fixed: Dragging man should be absolute, not relative, so the mouse doesn't get offset after wall collision
# 0.00.01 (41532) Jun 10, 2010
Fixed: If the user sets acceleration and velocity then presses go, should switch to acceleration mode so the acceleration is not overwritten (and same for velocity)
Added slider arrow rotation to indicate value-out-of-slider-range, while still enabling control over the values
Text-box improvements, accept value on focus lost and select all on focus gained so the user doesn't have to delete text before typing a new value
Fixed layout so that charts resize to take up additional space when window resized
Updated slider ranges on intro panel so that motion is constrained to a reasonable speed
Added "Show vector" checkboxes to chart tab
Made graphs minimizable/maximizable
Made it so that you can change position while paused